@@ -34,9 +34,7 @@
 #include "TrackPrivateBase.h"
 #include <glib-object.h>
 #include <gst/gst.h>
-#include <gst/tag/tag.h>
 #include <wtf/gobject/GUniquePtr.h>
-#include <wtf/text/CString.h>
 
 GST_DEBUG_CATEGORY_EXTERN(webkit_media_player_debug);
 #define GST_CAT_DEFAULT webkit_media_player_debug
@@ -161,9 +159,6 @@ void TrackPrivateBaseGStreamer::notifyTrackOfTagsChanged()
         return;
 
     TrackPrivateBaseClient* client = m_owner->client();
-    if (!client)
-        return;
-
     GRefPtr<GstTagList> tags;
     {
         MutexLocker lock(m_tagMutex);
@@ -172,18 +167,11 @@ void TrackPrivateBaseGStreamer::notifyTrackOfTagsChanged()
     if (!tags)
         return;
 
-    if (getTag(tags.get(), GST_TAG_TITLE, m_label))
+    if (getTag(tags.get(), GST_TAG_TITLE, m_label) && client)
         client->labelChanged(m_owner, m_label);
 
-    String language;
-    if (getTag(tags.get(), GST_TAG_LANGUAGE_CODE, language)) {
-        language = gst_tag_get_language_code_iso_639_1(language.utf8().data());
-        INFO_MEDIA_MESSAGE("Converted track %d's language code to %s.", m_index, language.utf8().data());
-        if (language != m_language) {
-            m_language = language;
-            client->languageChanged(m_owner, m_language);
-        }
-    }
+    if (getTag(tags.get(), GST_TAG_LANGUAGE_CODE, m_language) && client)
+        client->languageChanged(m_owner, m_language);
 }
 
 } // namespace WebCore
