@@ -1,3 +1,15 @@
+2014-03-06  Commit Queue  <commit-queue@webkit.org>
+
+        Unreviewed, rolling out r165175.
+        http://trac.webkit.org/changeset/165175
+        https://bugs.webkit.org/show_bug.cgi?id=129788
+
+        Linking failures on GTK, EFL due to missing gstreamer-tag-1.0
+        dependency (Requested by zdobersek on #webkit).
+
+        * platform/graphics/gstreamer/TrackPrivateBaseGStreamer.cpp:
+        (WebCore::TrackPrivateBaseGStreamer::notifyTrackOfTagsChanged):
+
 2014-03-05  Brendan Long  <b.long@cablelabs.com>
 
         [GStreamer] human readable language code for tracks
